# pizzas

./: CMakeLists.txt
app/: CMakeLists.txt
src/: CMakeLists.txt
src/pizzas/: CMakeLists.txt  Funghi.cpp  Margherita.cpp  Pizzeria.cpp
tests/: CMakeLists.txt
tests/mocks/: PizzaMock.hpp
tests/pizzas_tests/: PizzeriaTest.cpp
